로고 새로 추가

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="author" content="mochang2" />
     <meta name="description" content="notion clone coding" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./logo-bg.png" />
     <title>motion</title>
     <script src="./src/index.js" type="module"></script>
   </head>
